# Technologies-Programming-Of-Corporate-Systems

./: README.md
linter/: CMakeLists.txt
linter/src/: main.cpp
linter/src/core/: Error.h  LinterEngine.cpp  LinterEngine.h  ReportManager.cpp  ReportManager.h
linter/src/rules/: IndentRule.cpp  IndentRule.h  LineLengthRule.cpp  LineLengthRule.h  MemoryLeakRule.cpp  MemoryLeakRule.h  Rule.h  UninitVarRule.cpp  UninitVarRule.h  VarNameRule.cpp  VarNameRule.h
linter/src/utils/: FileIterator.cpp  FileIterator.h  FileReader.cpp  FileReader.h
linter/tests/: CMakeLists.txt
linter/tests/scenarios/: scenario_full_analysis.cpp  scenario_mixed_errors.cpp  scenario_no_errors.cpp  scenario_output_to_file.cpp  scenario_recursive_scan.cpp
linter/tests/unit/: test_FileIterator.cpp  test_FileReader.cpp  test_IndentRule.cpp  test_LineLengthRule.cpp  test_LinterEngine.cpp  test_MemoryLeakRule.cpp  test_ReportManager.cpp  test_UninitVarRule.cpp  test_VarNameRule.cpp
КР1/: hello.cpp
